config traffic server 8.0.3

--- a/files/etc/trafficserver/cache.config
+++ b/files/etc/trafficserver/cache.config
@@ -1,12 +1,15 @@
 #
 # cache.config
 #
+# Documentation:
+#    https://docs.trafficserver.apache.org/en/latest/admin-guide/files/cache.config.en.html
+#
 # The purpose of this file is to alter caching parameters of
 #   specific objects or sets of objects
 #
 # Each line consists of a set of tag value pairs.  The pairs
 #   are in the format  <tag>=<value>
-# 
+#
 # Each line must include exactly one primary specifier
 #
 #   Primary destination specifiers are
@@ -27,6 +30,7 @@
 #     method=
 #     time=
 #     src_ip=
+#     internal={true,false}
 #
 # Each line must include exactly one cache directive
 #   Cache directives are
@@ -49,5 +53,18 @@
 #
 # Examples
 #
-#  Revalidate all http objects from www.example.com after 2 hours 
+#  Revalidate all http objects from www.example.com after 2 hours
 #    dest_domain=www.example.com   scheme=http  revalidate=2h
+url_regex=.* suffix=xml  ttl-in-cache=5d
+url_regex=.* suffix=ts  ttl-in-cache=5d
+url_regex=.* suffix=jpeg  ttl-in-cache=5d
+url_regex=.* suffix=mp4  ttl-in-cache=5d
+url_regex=.* suffix=zip  ttl-in-cache=5d
+url_regex=.* suffix=gif  ttl-in-cache=5d
+url_regex=.* suffix=ppt  ttl-in-cache=5d
+url_regex=.* suffix=jpg  ttl-in-cache=5d
+url_regex=.* suffix=swf  ttl-in-cache=5d
+url_regex=.* scheme=http  ttl-in-cache=1h
+url_regex=.* scheme=m3u8  ttl-in-cache=5d
+url_regex=.* scheme=js  ttl-in-cache=5d
+url_regex=.* scheme=css  ttl-in-cache=5d
