--- a/files/etc/trafficserver/remap.config
+++ b/files/etc/trafficserver/remap.config
@@ -1,5 +1,8 @@
 #
-#  URL Remapping Config File
+# remap.config - URL Remapping Config File
+#
+# Documentation:
+#    https://docs.trafficserver.apache.org/en/latest/admin-guide/files/remap.config.en.html
 #
 # Using remap.config allows you to accomplish two things:
 #
@@ -140,7 +143,7 @@
 #
 #    @action=allow|deny
 #    @src_ip=IP-address
-#    @method=HTTP method string (CONNECT|DELETE|GET|HEAD|ICP_QUERY|OPTIONS|POST|PURGE|PUT|TRACE|PUSH)
+#    @method=HTTP method string (CONNECT|DELETE|GET|HEAD|OPTIONS|POST|PURGE|PUT|TRACE|PUSH)
 #    @plugin=<plugin_path>
 #    @pparam=<plugin_param>
 #
@@ -155,7 +158,7 @@
 #  Example:
 #     map ws://bar.com/ ws://foo.com/
 #
-#  Explaination: When a request comes in with the appropriate upgrade headers, Traffic Server will use this
+#  Explanation: When a request comes in with the appropriate upgrade headers, Traffic Server will use this
 #   remap rule in an attempt to establish and maintain a websocket connection.
 #
 #  Named filters can be created and applied to blocks of mappings
@@ -190,3 +193,34 @@
 #     will be the entire input string)
 #  3) The number of substitutions in the expansion string is limited to 10.
 #
+
+# map ok
+map http://adam-OptiPlex-3046/myCI/ http://{cache} @action=allow @src_ip=10.20.1.1-10.20.3.254
+
+# slice and cachekey ok
+regex_map http://([0-9a-zA-Z]+).cdn.xuetangx.com http://$1.cdn.xuetangx.com \
+	@plugin=slice.so \
+	@plugin=cachekey.so \
+	@pparam=--capture-prefix=[0-9a-zA-Z]+.(cdn.xuetangx.com) \
+	@pparam=--include-headers=Range \
+	@pparam=--remove-all-params=true \
+	@plugin=cache_range_requests.so
+
+# 中国大学Mooc视频缓存
+map http://jdvodrvfb210d.vod.126.net https://jdvodrvfb210d.vod.126.net \
+	@plugin=slice.so \
+	@plugin=cachekey.so \
+	@pparam=--capture-prefix=(jdvodrvfb210d.vod.126.net) \
+	@pparam=--remove-all-params=true \
+	@pparam=--include-headers=Range \
+	@plugin=cache_range_requests.so
+
+# 中国大学Mooc视频缓存
+map https://jdvodrvfb210d.vod.126.net https://jdvodrvfb210d.vod.126.net \
+	@plugin=slice.so \
+	@plugin=cachekey.so \
+	@pparam=--capture-prefix=(jdvodrvfb210d.vod.126.net) \
+	@pparam=--remove-all-params=true \
+	@pparam=--include-headers=Range \
+	@plugin=cache_range_requests.so
+
