--- a/files/etc/trafficserver/plugin.config
+++ b/files/etc/trafficserver/plugin.config
@@ -1,3 +1,9 @@
+#
+# plugin.config
+#
+# Documentation:
+#    https://docs.trafficserver.apache.org/en/latest/admin-guide/files/plugin.config.en.html
+#
 # Comments start with a '#' and continue to the end of the line
 # Blank lines are ignored
 #
@@ -7,3 +13,7 @@
 #inktomi/iwx/iwx.so
 #inktomi/abuse/abuse.so etc/trafficserver/abuse.config
 #inktomi/icx/icx.so etc/trafficserver/icx.config
+
+xdebug.so --header=X-Debug
+
+certifier.so --store=etc/trafficserver/certifier/certs --max=1000 --sign-cert=etc/trafficserver/certifier/ca.pem --sign-key=etc/trafficserver/certifier/ca.pem --sign-serial=etc/trafficserver/certifier/ca-serial.txt
