--- a/files/etc/trafficserver/cache.config
+++ b/files/etc/trafficserver/cache.config
@@ -65,6 +65,6 @@ url_regex=.* suffix=ppt  ttl-in-cache=5d
 url_regex=.* suffix=jpg  ttl-in-cache=5d
 url_regex=.* suffix=swf  ttl-in-cache=5d
 url_regex=.* scheme=http  ttl-in-cache=1h
-url_regex=.* scheme=m3u8  ttl-in-cache=5d
-url_regex=.* scheme=js  ttl-in-cache=5d
-url_regex=.* scheme=css  ttl-in-cache=5d
+url_regex=.* suffix=m3u8  ttl-in-cache=5d
+url_regex=.* suffix=js  ttl-in-cache=5d
+url_regex=.* suffix=css  ttl-in-cache=5d
