修正remap的.转义;以及ca证书修正.

--- a/files/etc/trafficserver/remap.config
+++ b/files/etc/trafficserver/remap.config
@@ -198,7 +198,7 @@
 map http://adam-OptiPlex-3046/myCI/ http://{cache} @action=allow @src_ip=10.20.1.1-10.20.3.254
 
 # slice and cachekey ok
-regex_map http://([0-9a-zA-Z]+).cdn.xuetangx.com http://$1.cdn.xuetangx.com \
+regex_map http://([0-9a-zA-Z]+)\.cdn\.xuetangx\.com http://$1.cdn.xuetangx.com \
 	@plugin=slice.so \
 	@plugin=cachekey.so \
 	@pparam=--capture-prefix=[0-9a-zA-Z]+.(cdn.xuetangx.com) \
