--- a/files/etc/trafficserver/records.config
+++ b/files/etc/trafficserver/records.config
@@ -21,6 +21,7 @@ CONFIG proxy.config.exec_thread.affinity INT 1
 #    https://docs.trafficserver.apache.org/records.config#proxy.config.http.server_ports
 ##############################################################################
 CONFIG proxy.config.http.server_ports STRING 8080 8080:ipv6 8443:ssl
+CONFIG proxy.config.http.connect_ports STRING 443 8443
 
 ##############################################################################
 # Via: headers. Docs:
