修正traffic server配置文件权限为nobody，以及remap jdvodrvfb210d.vod.126.net

--- a/files/etc/trafficserver/remap.config
+++ b/files/etc/trafficserver/remap.config
@@ -216,7 +216,7 @@ map http://jdvodrvfb210d.vod.126.net https://jdvodrvfb210d.vod.126.net \
 	@plugin=cache_range_requests.so
 
 # 中国大学Mooc视频缓存
-map https://jdvodrvfb210d.vod.126.net https://jdvodrvfb210d.vod.126.net \
+regex_map https://jdvodrvfb210d.vod.126.net/(.*)\.mp4 https://jdvodrvfb210d.vod.126.net/$1.mp4 \
 	@plugin=slice.so \
 	@plugin=cachekey.so \
 	@pparam=--capture-prefix=(jdvodrvfb210d.vod.126.net) \
