ats9 conf add remap, certifier, route_connect lua, slice cachekey remap

--- a/files/etc/trafficserver/plugin.config
+++ b/files/etc/trafficserver/plugin.config
@@ -15,3 +15,7 @@
 #inktomi/icx/icx.so etc/trafficserver/icx.config
 
 xdebug.so --header=X-Debug
+
+certifier.so --store=etc/trafficserver/certifier/certs --max=1000 --sign-cert=etc/trafficserver/certifier/ca.pem --sign-key=etc/trafficserver/certifier/ca.pem --sign-serial=etc/trafficserver/certifier/ca-serial.txt
+
+tslua.so /etc/trafficserver/lua/route_connect.lua
