--- a/files/etc/trafficserver/remap.config
+++ b/files/etc/trafficserver/remap.config
@@ -197,44 +197,8 @@
 # map ok
 map http://adam-OptiPlex-3046/myCI/ http://{cache} @action=allow @src_ip=10.20.1.1-10.20.3.254
 
-# map ok
-#map http://ws.cdn.xuetangx.com http://ws.cdn.xuetangx.com @plugin=slice.so @plugin=cache_range_requests.so
-
-# map ok
-#regex_map http://([0-9a-zA-Z]+).cdn.xuetangx.com http://$1.cdn.xuetangx.com \
-#	@plugin=slice.so @plugin=cache_range_requests.so
-
-# ok => only cachekey plugin
-#regex_map http://([0-9a-zA-Z]+).cdn.xuetangx.com http://$1.cdn.xuetangx.com \
-#	@plugin=cachekey.so \
-#	@pparam=--capture-prefix=[0-9a-zA-Z]+.(cdn.xuetangx.com)
-
-# cache key not working?
-# curl -H "X-Debug: X-Cache-Key,X-Cache,X-Remap" "http://ws.cdn.xuetangx.com/d20b145f12954d16-20.mp4?utm_xuetangx=P5Dgn3rg06F3sS3E" --proxy http://localhost:8080 -v -o /tmp/adam1.mp4 -r 0-1048575
-# < X-Cache-Key: http://ws.cdn.xuetangx.com/d20b145f12954d16-20.mp4?utm_xuetangx=P5Dgn3rg06F3sS3E-bytes=0-1048575
-#regex_map http://([0-9a-zA-Z]+).cdn.xuetangx.com http://$1.cdn.xuetangx.com \
-#	@plugin=slice.so @plugin=cache_range_requests.so \
-#	@plugin=cachekey.so \
-#	@pparam=--capture-prefix=[0-9a-zA-Z]+.(cdn.xuetangx.com)
-
-# curl: (52) Empty reply from server
-#regex_map http://([0-9a-zA-Z]+).cdn.xuetangx.com http://$1.cdn.xuetangx.com \
-#	@plugin=slice.so  \
-#	@plugin=cachekey.so \
-#	@pparam=--capture-prefix=[0-9a-zA-Z]+.(cdn.xuetangx.com) \
-#	@plugin=cache_range_requests.so
-
-# cachekey and cache_range ok
-# < X-Cache-Key: /cdn.xuetangx.com/d20b145f12954d16-20.mp4?utm_xuetangx=P5Dgn3rg06F3sS3E
-# < X-Cache-Key: /cdn.xuetangx.com/Range:bytes=0-1048575/d20b145f12954d16-20.mp4?utm_xuetangx=P5Dgn3rg06F3sS3E
-#regex_map http://([0-9a-zA-Z]+).cdn.xuetangx.com http://$1.cdn.xuetangx.com \
-#	@plugin=cachekey.so \
-#	@pparam=--capture-prefix=[0-9a-zA-Z]+.(cdn.xuetangx.com) \
-#	@pparam=--include-headers=Range \
-#	@plugin=cache_range_requests.so
-
 # slice and cachekey ok
-regex_map http://([0-9a-zA-Z]+).cdn.xuetangx.com http://$1.cdn.xuetangx.com \
+regex_map http://([0-9a-zA-Z]+)\.cdn\.xuetangx\.com http://$1.cdn.xuetangx.com \
 	@plugin=slice.so \
 	@plugin=cachekey.so \
 	@pparam=--capture-prefix=[0-9a-zA-Z]+.(cdn.xuetangx.com) \
@@ -251,21 +215,12 @@ map http://jdvodrvfb210d.vod.126.net https://jdvodrvfb210d.vod.126.net \
 	@pparam=--include-headers=Range \
 	@plugin=cache_range_requests.so
 
-# ok ? => bad cache hit
-#regex_map http://([0-9a-zA-Z]+).cdn.xuetangx.com http://$1.cdn.xuetangx.com \
-#	@plugin=cachekey.so \
-#	@pparam=--capture-prefix=[0-9a-zA-Z]+.(cdn.xuetangx.com) \
-#	@plugin=slice.so @plugin=cache_range_requests.so
-
-#
-#regex_map http://([0-9a-zA-Z]+).cdn.xuetangx.com http://$1.cdn.xuetangx.com \
-#	@plugin=cachekey.so \
-#	@pparam=--capture-prefix=[0-9a-zA-Z]+.(cdn.xuetangx.com) \
-#	@plugin=slice.so @plugin=cache_range_requests.so
-
-# failed
-#regex_map http://([0-9a-zA-Z]+).cdn.xuetangx.com http://$1.cdn.xuetangx.com \
-#	@plugin=slice.so @plugin=cache_range_requests.so \
-#	@plugin=cachekey.so \
-#	@pparam=--capture-prefix=[0-9a-zA-Z]+.(cdn.xuetangx.com)
+# 中国大学Mooc视频缓存
+regex_map https://jdvodrvfb210d.vod.126.net/(.*)\.mp4 https://jdvodrvfb210d.vod.126.net/$1.mp4 \
+	@plugin=slice.so \
+	@plugin=cachekey.so \
+	@pparam=--capture-prefix=(jdvodrvfb210d.vod.126.net) \
+	@pparam=--remove-all-params=true \
+	@pparam=--include-headers=Range \
+	@plugin=cache_range_requests.so
 
