fix remap https rule

--- a/files/etc/trafficserver/remap.config
+++ b/files/etc/trafficserver/remap.config
@@ -207,7 +207,7 @@ regex_map http://([0-9a-zA-Z]+)\.cdn\.xuetangx\.com http://$1.cdn.xuetangx.com \
 	@plugin=cache_range_requests.so
 
 # 中国大学Mooc视频缓存
-map http://jdvodrvfb210d.vod.126.net https://jdvodrvfb210d.vod.126.net \
+map http://jdvodrvfb210d.vod.126.net http://jdvodrvfb210d.vod.126.net \
 	@plugin=slice.so \
 	@plugin=cachekey.so \
 	@pparam=--capture-prefix=(jdvodrvfb210d.vod.126.net) \
@@ -216,7 +216,7 @@ map http://jdvodrvfb210d.vod.126.net https://jdvodrvfb210d.vod.126.net \
 	@plugin=cache_range_requests.so
 
 # 中国大学Mooc视频缓存
-regex_map https://jdvodrvfb210d.vod.126.net/(.*)\.mp4 https://jdvodrvfb210d.vod.126.net/$1.mp4 \
+map https://jdvodrvfb210d.vod.126.net https://jdvodrvfb210d.vod.126.net:443 \
 	@plugin=slice.so \
 	@plugin=cachekey.so \
 	@pparam=--capture-prefix=(jdvodrvfb210d.vod.126.net) \
