remove unsed etc files

--- a/files/etc/trafficserver/storage.config
+++ b/files/etc/trafficserver/storage.config
@@ -16,15 +16,15 @@
 # Where 'pathname' is full path to the directory where you want
 # the cache-file to live and 'size' is size in bytes
 #
-# Example: 128MB cache file(/opt/trafficserver8/var/trafficserver/cache.db)
-#      /opt/trafficserver8/var/trafficserver 128M
+# Example: 128MB cache file(/opt/trafficserver/var/trafficserver/cache.db)
+#      /opt/trafficserver/var/trafficserver 128M
 #
-# Example: 144MB cache file(/opt/trafficserver8/var/trafficserver/cache.db)
-#          assuming prefix of '/opt/trafficserver8'
+# Example: 144MB cache file(/opt/trafficserver/var/trafficserver/cache.db)
+#          assuming prefix of '/opt/trafficserver'
 #      var/trafficserver 150994944
 #
-# Example: 512MB cache file(/opt/trafficserver8/var/trafficserver/cache.db)
-#          assuming prefix of '/opt/trafficserver8'
+# Example: 512MB cache file(/opt/trafficserver/var/trafficserver/cache.db)
+#          assuming prefix of '/opt/trafficserver'
 #      var/trafficserver 512M
 #
 #
