--- a/files/etc/trafficserver/remap.config
+++ b/files/etc/trafficserver/remap.config
@@ -143,7 +143,7 @@
 #
 #    @action=allow|deny
 #    @src_ip=IP-address
-#    @method=HTTP method string (CONNECT|DELETE|GET|HEAD|OPTIONS|POST|PURGE|PUT|TRACE|PUSH)
+#    @method=HTTP method string (CONNECT|DELETE|GET|HEAD|ICP_QUERY|OPTIONS|POST|PURGE|PUT|TRACE|PUSH)
 #    @plugin=<plugin_path>
 #    @pparam=<plugin_param>
 #
@@ -158,7 +158,7 @@
 #  Example:
 #     map ws://bar.com/ ws://foo.com/
 #
-#  Explanation: When a request comes in with the appropriate upgrade headers, Traffic Server will use this
+#  Explaination: When a request comes in with the appropriate upgrade headers, Traffic Server will use this
 #   remap rule in an attempt to establish and maintain a websocket connection.
 #
 #  Named filters can be created and applied to blocks of mappings
