add plugin collapsed_forwarding, and collapsed fix patch 并发请求合源，和新增合源缓存命令patch

--- a/files/etc/trafficserver/records.config
+++ b/files/etc/trafficserver/records.config
@@ -180,3 +180,12 @@ CONFIG proxy.config.dump_mem_info_frequency INT 0
 CONFIG proxy.config.http.slow.log.threshold INT 0
 # cache inspect
 CONFIG proxy.config.http_ui_enabled INT 1
+
+
+CONFIG proxy.config.http.cache.open_write_fail_action INT          1
+CONFIG proxy.config.cache.enable_read_while_writer INT             1
+CONFIG proxy.config.http.redirection_enabled INT                   1
+CONFIG proxy.config.http.number_of_redirections INT                10
+CONFIG proxy.config.http.redirect_use_orig_cache_key INT           1
+CONFIG proxy.config.http.background_fill_active_timeout INT        0
+CONFIG proxy.config.http.background_fill_completed_threshold FLOAT 0.0
