--- a/files/etc/trafficserver/plugin.config
+++ b/files/etc/trafficserver/plugin.config
@@ -19,3 +19,5 @@ xdebug.so --header=X-Debug
 certifier.so --store=etc/trafficserver/certifier/certs --max=1000 --sign-cert=etc/trafficserver/certifier/ca.pem --sign-key=etc/trafficserver/certifier/ca.pem --sign-serial=etc/trafficserver/certifier/ca-serial.txt
 
 tslua.so /etc/trafficserver/lua/route_connect.lua
+
+collapsed_forwarding.so --delay=500 --retries=5
